# groceries-prototype

./: LICENSE  groceries.yml  pyproject.toml
groceries/: app.py  list_maker.py  models.py  shopper.py
grocery_lists/: 07-12-2020.json
